# tauri-ci-demo

./: .gitignore  OPTIMIZATION_GUIDE.md  README.md  package.json
.github/workflows/: apk.yml  release.yml
public/: a.m4a  audio.m4a
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  desktop.windows.json
src-tauri/src/: api.rs  cmd.rs  core.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: audio_commands.rs  mod.rs  playlist_commands.rs  system_commands.rs
src-tauri/src/models/: audio.rs  config.rs  mod.rs  playlist.rs
src-tauri/src/services/: downloader.rs  metadata.rs  mod.rs  playlist_manager.rs  search.rs  storage.rs
src/api/: index.ts
src/components/: AudioList.css  AudioList.tsx  AudioPlayer.css  AudioPlayer.tsx  BottomNavigation.css  BottomNavigation.tsx  DownloadPage.css  DownloadPage.tsx  ImportDialog.css  ImportDialog.tsx  PlaylistManager.css  PlaylistManager.tsx  SearchBar.css  SearchBar.tsx  StorageManager.css  StorageManager.tsx  index.ts
src/components/AudioCard/: index.tsx
src/components/PlayerCard/: index.tsx
src/components/PlaylistCard/: index.tsx
src/components/TopNav/: index.tsx
src/constants/: index.ts
src/hooks/: index.ts  useAudioPlayer.ts  useLocalAudios.ts  useSwipe.ts
src/pages/: LibraryPage.css  LibraryPage.tsx  PlayerPage.css  PlayerPage.tsx  index.ts
src/pages/MusicPage/: index.tsx
src/pages/PlayerPage/: index.less  index.tsx
src/pages/PlaylistsPage/: index.tsx
src/store/: index.ts  selectors.ts
src/styles/: index.less
src/types/: index.ts
src/ui/: PlayPage.tsx  SearchPage.tsx  SettingPage.tsx  index.tsx
src/utils/: index.ts
(+2 files in other folders)
