[package]
name = "tauri-ci-demo"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_ci_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = [
  "json",
  "gzip",
  "rustls-native-certs",
  "cookies",
] }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "*"
musicfree = { git = "https://github.com/ahaoboy/musicfree", version = "0.1", default-features = false, features = [
  "bilibili",
  "bindgen",
  "qjs",
  "youtube",
] }
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.8"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

# [target.'cfg(target_os = "windows")'.dependencies]
# tauri-plugin-media = "0.1"
